@@ -6,6 +6,7 @@ proftpd-dfsg (1.3.6-3) UNRELEASED; urgency=medium
   * Do create /run/proftpd also in postinst, if not exists yet.
     (Closes: #608881)
   * New Proftp module package: proftpd-mod-snmp.
+  * Add "Enhances: proftpd-basic" to all modules built by this package.
 
  -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 01 May 2018 14:57:41 +0200
 
